# HighMap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md  _2home_2runner_2work_2HighMap_2HighMap_2HighMap_2include_2highmap_2export_8hpp-example.html  _2home_2runner_2work_2HighMap_2HighMap_2HighMap_2include_2highmap_2internal_2string_utils_8hpp-example.html  add__noise_8cpp.html  add__noise_8cpp.js  advection__gpu_8cpp.html  advection__gpu_8cpp.js  advection__particle__gpu_8cpp.html  advection__particle__gpu_8cpp.js  advection__warp__gpu_8cpp.html  advection__warp__gpu_8cpp.js  algebra_8cpp.html  algebra_8cpp.js  algebra_8hpp.html  algebra_8hpp.js  algebra_8hpp_source.html  alpha__model_8cpp.html  alpha__model_8cpp.js  alter__elevation_8cpp.html  alter__elevation_8cpp.js  annotated.html  annotated_dup.js  array_8hpp.html  array_8hpp.js  array_8hpp_source.html  array__functions_8cpp.html  array__functions_8cpp.js  assert_8cpp.html  assert_8cpp.js  assert_8hpp.html  assert_8hpp.js  assert_8hpp_source.html  authoring_8hpp.html  authoring_8hpp.js  authoring_8hpp_source.html  autocorr__length__scale_8cpp.html  (+1449 more)
HighMap/: CMakeLists.txt
HighMap/include/: highmap.hpp
benchmarks/: CMakeLists.txt
benchmarks/src/: bm_curvature_quadric.cpp  bm_expand.cpp  bm_gradient_norm.cpp  bm_math.cpp  bm_range.cpp  bm_smooth_cpulse.cpp  main.cpp
docs/doxygen/: Doxyfile
examples/ex_abs_smooth/: ex_abs_smooth.cpp
examples/ex_add_noise_ipath/: CMakeLists.txt  (+1 more)
latex/: _2home_2runner_2work_2HighMap_2HighMap_2HighMap_2include_2highmap_2export_8hpp-example.tex  _2home_2runner_2work_2HighMap_2HighMap_2HighMap_2include_2highmap_2internal_2string_utils_8hpp-example.tex  add__noise_8cpp.tex  advection__gpu_8cpp.tex  advection__particle__gpu_8cpp.tex  advection__warp__gpu_8cpp.tex  algebra_8cpp.tex  algebra_8hpp.tex  algebra_8hpp_source.tex  alpha__model_8cpp.tex  alter__elevation_8cpp.tex  annotated.tex  array_8hpp.tex  array_8hpp_source.tex  array__functions_8cpp.tex  assert_8cpp.tex  assert_8hpp.tex  assert_8hpp_source.tex  authoring_8hpp.tex  authoring_8hpp_source.tex  autocorr__length__scale_8cpp.tex  badlands_8cpp.tex  band_8cpp.tex  basalt__field_8cpp.tex  base__elevation_8cpp.tex  basin__id_8cpp.tex  bilateral__filter_8cpp.tex  blending_8cpp.tex  blending_8hpp.tex  blending_8hpp_source.tex  blending__gpu_8cpp.tex  boundary_8cpp.tex  boundary_8hpp.tex  boundary_8hpp_source.tex  bulkify_8cpp.tex  caldera_8cpp.tex  carving_8hpp.tex  carving_8hpp_source.tex  cell__path_8cpp.tex  cell__path_8hpp.tex  (+601 more)
scripts/: benchmarks_analyze_results.py  check_headers_iwyu.sh  clang_style  format_src.sh  plot_erosion_profiles.py
search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+100 more)
tests/: CMakeLists.txt
tests/src/: main.cpp  test_area_remove.cpp  test_array_io.cpp  test_autocorr_length_scale.cpp  test_band.cpp  test_chebyshev.cpp  test_cloud.cpp  test_color_match_mask.cpp  test_connected_components.cpp  test_decimate_vw.cpp  test_distance_transform.cpp  test_erosion.cpp  test_fill_talus.cpp  test_flood_fill.cpp  test_gpu_cpu.cpp  test_gradient.cpp  test_interpolate1d.cpp  test_island_chain.cpp  test_level_set_curvature.cpp  test_local_metrics.cpp  test_math.cpp  test_math_histogram.cpp  test_normalize.cpp  test_path_arc_length.cpp  test_path_sample_at.cpp  test_pdf_sampler.cpp  test_point.cpp  test_range.cpp  test_remap.cpp  test_remove_endpoints.cpp  test_saturate.cpp  test_skeleton.cpp  test_smooth_cpulse.cpp  test_splines.cpp  test_variance.cpp
tests/test_gpu_vs_cpu/: main.cpp
xml/: Doxyfile.xml  _2home_2runner_2work_2HighMap_2HighMap_2HighMap_2include_2highmap_2export_8hpp-example.xml  _2home_2runner_2work_2HighMap_2HighMap_2HighMap_2include_2highmap_2internal_2string_utils_8hpp-example.xml  add__noise_8cpp.xml  advection__gpu_8cpp.xml  advection__particle__gpu_8cpp.xml  advection__warp__gpu_8cpp.xml  algebra_8cpp.xml  algebra_8hpp.xml  alpha__model_8cpp.xml  alter__elevation_8cpp.xml  array_8cpp.xml  array_8hpp.xml  array__functions_8cpp.xml  assert_8cpp.xml  assert_8hpp.xml  authoring_8hpp.xml  autocorr__length__scale_8cpp.xml  badlands_8cpp.xml  band_8cpp.xml  basalt__field_8cpp.xml  base__elevation_8cpp.xml  basin__id_8cpp.xml  bilateral__filter_8cpp.xml  blending_8cpp.xml  blending_8hpp.xml  blending__gpu_8cpp.xml  boundary_8cpp.xml  boundary_8hpp.xml  bulkify_8cpp.xml  caldera_8cpp.xml  carving_8hpp.xml  cell__path_8cpp.xml  cell__path_8hpp.xml  chebyshev_8hpp.xml  checkerboard_8cpp.xml  classhmap_1_1Array.xml  classhmap_1_1ArrayControlFunction.xml  classhmap_1_1ArrayFunction.xml  classhmap_1_1BiquadFunction.xml  (+541 more)
(+843 files in other folders)
